@@ -1,3 +1,8 @@
+2008-07-01  Dustin J. Mitchell <dustin@zmanda.com>
+	* changer-src/chg-lib.sh.in: fix tape_device_filename to not use perl
+	* changer-src/chg-zd-mtx.sh: always use the unqualified hostname to
+	  open the debug file
+
 2008-06-30  Dustin J. Mitchell <dustin@zmanda.com>
 	* common-src/match.c: fix multiple bugs in match_datestamp
 
